# AdservioToolbox

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: INSTALLING_PYTHON.md
docs/cheat/: L1.md  L2.md  L3.md
docs/tldr/: claude-code.md  cloakmcp.md  eco.md  memctl.md  toolboxctl.md
docs/workflows/: first-session.md
scripts/: build-release.sh  install-hooks.sh  install.ps1  install.py  install.sh  playground.sh  test-e2e.sh
toolbox/: __init__.py  _platform.py  cli.py  config.py  doctor.py  eco.py  env.py  global_wiring.py  helpers.py  init.py  install.py  playground.py  project_wiring.py  rescue.py  status.py  update.py
toolbox/templates/: adservio-toolbox.toml  settings.json
toolbox/templates/commands/: cheat.md  eco.md  how.md  tldr.md  why.md
