[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adservio-toolbox"
version = "0.5.3"
description = "Adservio Claude Code Toolbox — installer, configurator, and developer assets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Olivier Vitrac", email = "olivier.vitrac@adservio.fr"},
]
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
toolboxctl = "toolbox.cli:main"

[tool.setuptools.packages.find]
include = ["toolbox*"]

[tool.setuptools.package-data]
toolbox = [
    "templates/*.toml",
    "templates/*.json",
    "templates/commands/*.md",
]
